update images and fix typo

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>We are getting married</h3>
-                <p>The dates is October 7<sup>th</sup>, 2023 and we would like you to be a part of
+                <p>The date is October 7<sup>th</sup>, 2023 and we would like you to be a part of
                     it.</p>
                 <div class="share-bar"></div>
             </div>
