--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                             <li><a href="#intro">Our Story</a></li>
                             <li><a href="#instagram">Social Media</a></li>
                             <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Venue</a></li>
+                            <li><a href="#registry">Registry</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#map" class="login">Venue</a></li>
@@ -256,7 +257,7 @@
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Fortune%20Park%20Panchwati%20-%20Hotels%20in%20Kolkata%2C%20Howrah%2C%20West%20Bengal%2C%20India&dropoff[latitude]=22.593276&dropoff[longitude]=88.270277"><i
+                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[nickname]=Castaway%20Burbank&dropoff[latitude]=34.2042000681dropoff[longitude]=-118.302994022"><i
                                     class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
@@ -265,6 +266,47 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="Registry" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>Registry</h3>
+                <p>Take a look at our registry on Amazon, or our Venmo/Zelle.</p>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <a rel="group" href="https://www.amazon.com/wedding/jared-wada-clare-moore-burbank-october-2023/registry/2ULRXFSJFO0NW">
+                        <div class="img-wrap">
+                            <img src="img/amazon.png" alt="amazon" style="width:250x;height:100px;"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a rel="group" href="img/clareqr.jpg">
+                        <div class="img-wrap">
+                            <img src="img/zelle.png" alt="zelle" style="width:250px;height:100px;"/>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-4 text-center">
+                    <a class="fancybox" rel="group" href="https://venmo.com/u/Jared-Wada">
+                        <div class="img-wrap">
+                            <img src="img/venmo.png" alt="venmo" style="width:250px;height:100px;"/>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row hidden-lg hidden-md hidden-xs">
+                <div class="col-xs-12 section-border section-padding"></div>
             </div>
         </div>
     </div>
