add pop up for zelle image

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 text-center">
-                    <a rel="group" href="img/clareqr.jpg">
+                    <a class="fancybox" rel="other" href="img/clareqr.jpg">
                         <div class="img-wrap">
                             <img src="img/zelle.png" alt="zelle" style="width:250px;height:100px;"/>
                         </div>
