type in menu for registry id

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </div>
 </section>
 
-<section id="Registry" class="section-padding">
+<section id="registry" class="section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
