--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
+                <h3><i>Wada</i> are you waiting for?</h3>
+                <p>We would greatly appreciate if you could RSVP before the 1st of September '23</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
