--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     <div class="row text-center">
                         <div class="col-md-6" style="padding: 5px;">
                             <a class="btn btn-fill btn-small"
-                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[nickname]=Castaway%20Burbank&dropoff[latitude]=34.2042000681dropoff[longitude]=-118.302994022"><i
+                               href="https://m.uber.com/ul/?action=setPickup&client_id=Yh7Dl6SjB56RY2JuuZF8ttVa6ryFV78W&pickup=my_location&dropoff[formatted_address]=Castaway%20Restaurant%20%26%20Events%2C%20East%20Harvard%20Road%2C%20Burbank%2C%20CA%2C%20USA&dropoff[latitude]=34.204197&dropoff[longitude]=-118.303032"><i
                                     class="fa fa-taxi"></i>&nbsp;&nbsp;Book Uber</a>
                         </div>
                         <div class="col-md-6" style="padding: 5px;">
