--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3><i>Wada</i> are you waiting for?</h3>
+                <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
                 <p>We would greatly appreciate if you could RSVP before the 1st of September '23</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
