--- a/index.html
+++ b/index.html
@@ -330,6 +330,27 @@
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+    <div id="troll-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <div class="section-padding">
+                        <a class="fancybox" rel="troll" href="img/eng_pics/hug-lg.jpg">
+                            <div class="img-wrap">
+                                <div class="overlay">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <img src="img/eng_pics/hug-sm.jpg" alt=""/>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
