--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <div class="section-padding">
-                        <a class="fancybox" rel="troll" href="img/eng_pics/hug-lg.jpg">
+                        <a class="fancybox" style="width: 100%" rel="troll" href="img/eng_pics/hug-lg.jpg">
                             <div class="img-wrap">
                                 <div class="overlay">
                                     <i class="fa fa-search"></i>
