--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                 <div class="overlay">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <img src="img/eng_pics/hug-sm.jpg" alt=""/>
+                                <img style="width: 100%" src="img/eng_pics/hug-sm.jpg" alt=""/>
                             </div>
                         </a>
                     </div>
