--- a/index.html
+++ b/index.html
@@ -337,12 +337,12 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <div class="section-padding">
-                        <a class="fancybox" style="width: 100%" rel="troll" href="img/eng_pics/hug-lg.jpg">
+                        <a class="fancybox" style="width: 100%" rel="troll" href="img/troll.jpeg">
                             <div class="img-wrap">
                                 <div class="overlay">
                                     <i class="fa fa-search"></i>
                                 </div>
-                                <img style="width: 100%" src="img/eng_pics/hug-sm.jpg" alt=""/>
+                                <img style="width: 100%" src="img/troll.jpeg" alt=""/>
                             </div>
                         </a>
                     </div>
