make contact email easy link

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="collapse text-center" id="testmap">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3299.736773793258!2d-118.30751666420909!3d34.20420135499706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29532551f4bfb%3A0xfa5bbdb4a2b189fc!2sCastaway%20Restaurant%20%26%20Events!5e0!3m2!1sen!2sus!4v1676839714131!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3299.736773793258!2d-118.30751666420909!3d34.20420135499706!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c29532551f4bfb%3A0xfa5bbdb4a2b189fc!2sCastaway%20Restaurant%20%26%20Events!5e0!3m2!1sen!2sus!4v1676839714131!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen=":wtrue" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -404,7 +404,7 @@
                         that's me!
                     </button>
                 </form>
-                <p><b>If you have any questions or problems please email us at clarejaredwadawedding@gmail.com</b></p>
+                <p><b>If you have any questions or problems please email us at <a href = "mailto: clarejaredwadawedding@gmail.com">clarejaredwadawedding@gmail.com</a></b></p>
             </div>
         </div>
     </div>
