--- a/thingstodo.html
+++ b/thingstodo.html
@@ -98,7 +98,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="text-center">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.548656886737!2d-118.31476792277778!3d34.18345551078828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c295df7fb8e317%3A0x9ae4021ab7846c!2sRound1%20Bowling%20%26%20Amusement!5e0!3m2!1sen!2sus!4v1681706941991!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3300.548656886737!2d-118.31476792277778!3d34.18345551078828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c295df7fb8e317%3A0x9ae4021ab7846c!2sRound1%20Bowling%20%26%20Amusement!5e0!3m2!1sen!2sus!4v1681706941991!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
