--- a/thingstodo.html
+++ b/thingstodo.html
@@ -47,6 +47,8 @@
           <nav>
             <ul class="primary-nav">
               <li><a href="/">Home</a></li>
+              <li><a href="#activities">Activities</a></li>
+              <li><a href="#food">Food</a></li>
             </ul>
           </nav>
         </div>
@@ -74,7 +76,7 @@
   </div>
 </section>
 
-<section id="intro">
+<section id="activities">
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
@@ -83,7 +85,7 @@
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <h4 class="header">Here's some of our favorite things to do around the Glendale/Burbank/Pasadena area!</h4>
+        <h4 class="header">Here's some of our favorite (non super touristy) things to do around the Glendale/Burbank/Pasadena area!</h4>
       </div>
     </div>
     <div class="row">
@@ -93,7 +95,7 @@
           This Japanese arcade is located in Burbank. It has tons of arcade games, bowling, billiards, and karaoke!
         </p>
       </div>
-      <section id="map" class="section-padding">
+      <section class="section-padding">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
@@ -105,6 +107,143 @@
         </div>
       </section>
     </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Huntington Gardens</h3>
+        <p>
+          A botanical garden in the Pasadena area
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9341.683728425474!2d-118.11795065894525!3d34.12628023795939!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2db4d02615c73%3A0xb328d70c295f1904!2sThe%20Huntington%20Library%2C%20Art%20Museum%2C%20and%20Botanical%20Gardens!5e0!3m2!1sen!2sus!4v1681708572921!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">The Americana</h3>
+        <p>
+          A shopping mall in Glendale - lots of good food and stores!
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.1052188050166!2d-118.25810622279049!3d34.14365011289566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0feef870c89%3A0xadffaf4a6862f04c!2sThe%20Americana%20at%20Brand!5e0!3m2!1sen!2sus!4v1681708797770!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+  </div>
+</section>
+
+<section id="food">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Food</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h4 class="header">Here's some of our favorite food places around the Glendale/Burbank/Pasadena area!</h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Eggslut</h3>
+        <p>
+          This egg sandwich place is super popular in Downtown LA. Try this much less busy location in the Glendale Americana. Also, there's a Philz Coffee next to it.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.1347349617286!2d-118.25709122279063!3d34.14289491293566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0fe6e611f9b%3A0xf7b81da683dadfa2!2sEggslut!5e0!3m2!1sen!2sus!4v1681709165438!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Pepper Lunch</h3>
+        <p>
+          A sizzling plate Japanese restaurant. As the name suggests, the food is pretty peppery and it all comes out on a ripping hot teppanyaki plate.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d211456.53727842416!2d-118.43188762664796!3d34.09492539211247!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c505794a24c9%3A0x2e1de7e15633de8e!2sPepper%20Lunch!5e0!3m2!1sen!2sus!4v1681709362730!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Raffi's Place</h3>
+        <p>
+          A Persian kabob place in Glendale. Very famous, very good. I'd suggest going in a group and ordering family style.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3301.9956799775414!2d-118.25822550537141!3d34.146452643452804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0ffe618e84f%3A0xb4904f6dc49a8c74!2sRaffi&#39;s%20Place!5e0!3m2!1sen!2sus!4v1681709713624!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="header">Papillon International Bakery</h3>
+        <p>
+          I'm not sure exactly what cuisine these are, but the Perashki and Ponchik's here are some of the best. If you're from Seattle, it's easily better than Perashky Perashky. We like the potato or beef perashki and the Nutella ponchik.
+        </p>
+      </div>
+      <section class="section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3302.5131334710063!2d-118.26008482279077!3d34.133211913447866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c0e382b0afa7%3A0x19f8a2587cfd8218!2sPapillon%20International%20Bakery!5e0!3m2!1sen!2sus!4v1681710063462!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+
   </div>
 </section>
 
