Hotel page set up, home page link update

--- a/index.html
+++ b/index.html
@@ -225,7 +225,11 @@
     <div class="text-center">
         <h3>How do I get there?</h3>
         <p>It's way easier than you think! <br>
-        Check out some of our favorite things in the area <a href="/thingstodo.html">here!</a></p>
+        <a href="/thingstodo.html">Check out some of our favorite things in the area here!</a>
+        <br>
+        <a href="/hotels.html">Looking for a place to stay? Click here for some recommendations</a>
+        </p>
+
 
     </div>
     <div class="container">
