--- a/hotels.html
+++ b/hotels.html
@@ -47,8 +47,6 @@
           <nav>
             <ul class="primary-nav">
               <li><a href="/">Home</a></li>
-              <li><a href="#activities">Activities</a></li>
-              <li><a href="#food">Food</a></li>
             </ul>
           </nav>
         </div>
@@ -78,12 +76,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 text-center">
-        <h3 class="header">Things To Do</h3>
+        <h3 class="header">Hotel Recommendations</h3>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12 text-center">
-        <h4 class="header">Here's some of our favorite (non super touristy) things to do around the Glendale/Burbank/Pasadena area!</h4>
+        <h4 class="header">Here's some hotels you can look at while you stay in town for our wedding!</h4>
       </div>
     </div>
     <div class="row">
