update registry images

--- a/index.html
+++ b/index.html
@@ -285,21 +285,21 @@
                 <div class="col-md-4 text-center">
                     <a rel="group" href="https://www.amazon.com/wedding/jared-wada-clare-moore-burbank-october-2023/registry/2ULRXFSJFO0NW">
                         <div class="img-wrap">
-                            <img src="img/amazon.png" alt="amazon" style="width:250x;height:100px;"/>
+                            <img src="img/amazon.png" alt="amazon" style="width:250x;height:150px;"/>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 text-center">
                     <a class="fancybox" rel="other" href="img/clareqr.jpg">
                         <div class="img-wrap">
-                            <img src="img/zelle.png" alt="zelle" style="width:250px;height:100px;"/>
+                            <img src="img/zelle.png" alt="zelle" style="width:250px;height:150px;/>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 text-center">
                     <a class="fancybox" rel="group" href="https://venmo.com/u/Jared-Wada">
                         <div class="img-wrap">
-                            <img src="img/venmo.png" alt="venmo" style="width:250px;height:100px;"/>
+                            <img src="img/venmo.png" alt="venmo" style="width:250px;height:150px;"/>
                         </div>
                     </a>
                 </div>
