--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                             <li><a href="#eng-pics">Engagement</a></li>
                             <li class="hidden-sm hidden-xs"><a href="#video-bg">Venue</a></li>
                             <li><a href="#registry">Registry</a></li>
+                            <li><a href="/thingstodo.html">Things To Do</a></li>
+                            <li><a href="/hotels.html">Hotels</a></li>
                         </ul>
                         <ul class="member-actions">
                             <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
