update address to open maps

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <h5>Castaway Burbank</h5>
-                            <p>1250 E Harvard Rd, Burbank, CA 91501, United States</p>
+                            <p><a href="https://maps.apple.com/?q=34.2042000681,-118.302994022">1250 E Harvard Rd, Burbank, CA 91501, United States</a></p>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -294,7 +294,7 @@
                 <div class="col-md-4 text-center">
                     <a class="fancybox" rel="other" href="img/clareqr.jpg">
                         <div class="img-wrap">
-                            <img src="img/zelle.png" alt="zelle" style="width:250px;height:150px;/>
+                            <img src="img/zelle.png" alt="zelle" style="width:250px;height:150px;"/>
                         </div>
                     </a>
                 </div>
@@ -337,7 +337,12 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before the 1st of September '23 <br> Please rsvp individually so that we can ensure your meal is correct <br> There will also be a prime rib station at dinner in addition to your meal choice</p>
+                <p>
+                    We would greatly appreciate if you could RSVP before the 1st of September '23
+                    <br> Please rsvp individually so that we can ensure your meal is correct
+                    <br> You may use the same email address for multiple people
+                    <br> There will also be a prime rib station at dinner in addition to your meal choice
+                </p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
