--- a/index.html
+++ b/index.html
@@ -335,14 +335,15 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-8 col-md-offset-2">
                 <h3 title="Clare insisted on this pun"><i>Wada</i> you waiting for?</h3>
-                <p>
+                <p><b>
                     We would greatly appreciate if you could RSVP before the 1st of September '23
-                    <br> Please rsvp individually so that we can ensure your meal is correct
+                    <br> Please find the invite code on your invitation
+                    <br> Please rsvp individually for each member of your family so that we can ensure your meal is correct
                     <br> You may use the same email address for multiple people
                     <br> There will also be a prime rib station at dinner in addition to your meal choice
-                </p>
+                </b></p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -402,7 +403,9 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Jared with lots of <span class="fa fa-heart pulse2"></span> for Clare</p>
+                <p>Crafted by Jared with lots of <span class="fa fa-heart pulse2"></span> for Clare
+                <br>This website was set up and coded by Jared. Questions about how it works? <a href="/">Click Here!</a>
+                </p>
             </div>
         </div>
     </div>
