--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
                 <p>Crafted by Jared with lots of <span class="fa fa-heart pulse2"></span> for Clare
-                <br>This website was set up and coded by Jared. Questions about how it works? <a href="/">Click Here!</a>
+                <br>This website was set up and coded by Jared. Questions about how it works? <a href="/websiteinfo.html">Click Here!</a>
                 </p>
             </div>
         </div>
