--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-cutlery"></i>
                                 <select class="form-control" name="meal" id="meal" form="rsvp-form" required>
-                                    <option selected disabled hidden>Meal Choice</option>
+                                    <option selected disabled>Meal Choice</option>
                                     <option value="chicken">Chicken</option>
                                     <option value="tofu">Tofu</option>
                                     <option value="nuggets">Children's Chicken Nuggets</option>
@@ -393,7 +393,7 @@
                             </div>
                         </div>
                     </div>
-                    <a><b id="add-person">Add Another Person</b></a>
+                    <a style="padding-bottom: 2rem; display: block;"><b id="add-person">Add Another Person</b></a>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
