validate meal choices

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-cutlery"></i>
                                 <select class="form-control" name="meal" id="meal" form="rsvp-form" required>
-                                    <option selected disabled>Meal Choice</option>
+                                    <option selected disabled value="">Meal Choice</option>
                                     <option value="chicken">Chicken</option>
                                     <option value="tofu">Tofu</option>
                                     <option value="nuggets">Children's Chicken Nuggets</option>
